fixed youtube iframe width on mobile

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,12 @@ specifically had problem with long links */
   @apply border-0 border-slate-300
 }
 
-
+iframe[src*=youtube] {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  padding-bottom: 10px;
+}
 
 /* body {
   @apply font-mono
